[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stardog-cloud-mcp"
version = "0.1.0"
description = "MCP Server for Stardog Cloud"
readme = "README.md"
requires-python = "~=3.12.0"
license = {text = "Apache-2.0"}
homepage = "https://github.com/stardog-union/stardog-cloud-mcp"
repository = "https://github.com/stardog-union/stardog-cloud-mcp"
documentation = "https://github.com/stardog-union/stardog-cloud-mcp#readme"
keywords = ["mcp", "stardog", "knowledge-graph", "ai", "voicebox", "sparql"]
authors = [
    {name = "Stardog Union", email = "support@stardog.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp==2.11.3",
    "pystardog>=0.19.0",
    "pydantic>=2.11.0",
    "httpx>=0.28.0",
    "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "mypy==1.17.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
    "flake8==7.3.0"
]
build = [
    "build>=1.3.0",
    "twine>=6.1.0"
]

[project.scripts]
stardog-cloud-mcp = "stardog_cloud_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["stardog_cloud_mcp"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["stardog_cloud_mcp/exceptions.py"]